[package]
name          = "std-logger"
description   = """
A logging implementation for the log crate that logs messages to standard error
and requests to standard out. It uses the logfmt standard
(https://www.brandur.org/logfmt) as format.
"""
version       = "0.4.0"
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license       = "MIT/Apache-2.0"
documentation = "https://docs.rs/std-logger"
repository    = "https://github.com/Thomasdezeeuw/std-logger"
readme        = "README.md"
keywords      = ["logging", "log", "logfmt", "standard"]
categories    = ["development-tools::debugging"]
include       = ["Cargo.toml", "src/lib.rs", "src/format.rs", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]
edition       = "2018"

[features]
default   = ["timestamp", "log-panic"]
log-panic = ["log-panics"]
timestamp = ["libc"]

# Enable use of features only available in nightly compiler.
nightly  = []

[dependencies]
log        = { version = "0.4.14", default-features = false, features = ["kv_unstable_std"] }
itoa       = { version = "0.4.7", default-features = false }
ryu        = { version = "1.0.5", default-features = false }
# Required by timestamp feature.
libc       = { version = "0.2.86", optional = true, default-features = false }
# Required by log-panic feature.
log-panics = { version = "2.0.0", optional = true, default-features = false, features = ["with-backtrace"] }

[dev-dependencies]
lazy_static = "1.0"

[workspace]
members = ["benches"]
