[package]
name          = "std-logger"
description   = """
A logging implementation for the log crate that logs messages to standard error
and requests to standard out. It support a number of output formats including
JSON, JSON for GCP (gcloud) and logfmt.
"""
version       = "0.5.6"
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license       = "MIT/Apache-2.0"
documentation = "https://docs.rs/std-logger"
repository    = "https://github.com/Thomasdezeeuw/std-logger"
readme        = "README.md"
keywords      = ["logging", "log", "standard", "logfmt", "json"]
categories    = ["development-tools::debugging"]
include       = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]
edition       = "2021"
autobenches = false

[features]
default   = ["timestamp", "log-panic"]
log-panic = []
timestamp = []
serde1    = ["serde", "log/kv_serde"]
nightly   = []

[dependencies]
log        = { version = "0.4.21", default-features = false, features = ["kv_std"] }
itoa       = { version = "1.0.1", default-features = false }
ryu        = { version = "1.0.5", default-features = false }
serde      = { version = "1",     default-features = false, optional = true }

[dev-dependencies]
libc       = { version = "0.2.86", default-features = false }
serde      = { version = "1",      default-features = false, features = ["derive"] }

[workspace]
members = ["benches", "parser"]
