[package]
name          = "std-logger-benchmarks"
version       = "0.0.0"
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
edition       = "2018"

[dependencies]
criterion   = "0.3.4"
libc        = "0.2.86"
log         = "0.4.14"

[[bench]]
name = "standard_out"
path = "standard_out.rs"
harness = false
