[package]
name          = "std-logger-parser"
description   = """
A parser for logs created by the std-logger crate.
"""
version       = "0.1.0"
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license       = "MIT/Apache-2.0"
edition       = "2018"

[dependencies]
log  = { version = "0.4.14", default-features = false }
libc = { version = "0.2.86", default-features = false }
